--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ jinja2 = "^3.1.4"
 pandas = "^2.2.3"
 toml = "^0.10.2"
 inquirer = "^3.4.0"
+pygetwindow = "^0.0.9"
+pywin32 = "^308"
 
 
 [tool.poetry.group.dev.dependencies]
