--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ toml = "^0.10.2"
 inquirer = "^3.4.0"
 pygetwindow = "^0.0.9"
 pywin32 = "^308"
+matplotlib = "^3.9.2"
+japanize-matplotlib = "^1.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
