--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pygetwindow = "^0.0.9"
 pywin32 = "^308"
 matplotlib = "^3.9.2"
 japanize-matplotlib = "^1.1.3"
+wcwidth = "^0.2.13"
 
 
 [tool.poetry.group.dev.dependencies]
